--- a/zivid_camera/settings/0_8sec.yml
+++ b/zivid_camera/settings/0_8sec.yml
@@ -1,12 +1,17 @@
 __version__:
   serializer: 1
-  data: 10
+  data: 12
 Settings:
   Acquisitions:
     - Acquisition:
-        Aperture: 5.66
-        Brightness: 1.5
-        ExposureTime: 6500
+        Aperture: 2.51941005922714
+        Brightness: 1.8
+        ExposureTime: 10000
+        Gain: 1.07247962217298
+    - Acquisition:
+        Aperture: 8.40610003633208
+        Brightness: 1.77248557848557
+        ExposureTime: 10000
         Gain: 1
   Diagnostics:
     Enabled: no
@@ -19,30 +24,31 @@ Settings:
         Green: 1
         Red: 1
       Experimental:
-        ToneMapping:
-          Enabled: hdrOnly
+        Mode: toneMapping
       Gamma: 1
     Filters:
       Experimental:
         ContrastDistortion:
           Correction:
-            Enabled: no
-            Strength: 0.4
+            Enabled: yes
+            Strength: 0.3
           Removal:
             Enabled: no
-            Threshold: 0.5
+            Threshold: 0.2
       Noise:
         Removal:
           Enabled: yes
-          Threshold: 7
+          Threshold: 5
       Outlier:
         Removal:
           Enabled: yes
-          Threshold: 5
+          Threshold: 2
       Reflection:
         Removal:
-          Enabled: no
+          Enabled: yes
+          Experimental:
+            Mode: global
       Smoothing:
         Gaussian:
-          Enabled: no
-          Sigma: 1.5
+          Enabled: yes
+          Sigma: 1
