--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -8,7 +8,9 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   zivid_camera
   dynamic_reconfigure
+  cv_bridge
 )
+
 
 catkin_package(
   CATKIN_DEPENDS zivid_camera
@@ -43,10 +45,10 @@ function(register_cpp_sample)
 endfunction()
 
 register_cpp_sample(NAME sample_capture_cpp SRC src/sample_capture.cpp)
-register_cpp_sample(NAME sample_capture_and_save_cpp SRC src/sample_capture_and_save.cpp)
 register_cpp_sample(NAME sample_capture_2d_cpp SRC src/sample_capture_2d.cpp)
 register_cpp_sample(NAME sample_capture_assistant_cpp SRC src/sample_capture_assistant.cpp)
-register_cpp_sample(NAME sample_capture_with_settings_from_yml_cpp SRC src/sample_capture_with_settings_from_yml.cpp)
+register_cpp_sample(NAME pub_img_calib_cpp SRC src/pub_img_calib.cpp)
+
 
 ####################
 ## Python Samples ##
@@ -67,10 +69,8 @@ function(register_python_sample)
 endfunction()
 
 register_python_sample(SRC scripts/sample_capture.py)
-register_python_sample(SRC scripts/sample_capture_and_save.py)
 register_python_sample(SRC scripts/sample_capture_2d.py)
 register_python_sample(SRC scripts/sample_capture_assistant.py)
-register_python_sample(SRC scripts/sample_capture_with_settings_from_yml.py)
 
 ####################
 ## Launch scripts ##
